<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HackCellular</string>

    <string name="ip">IP Address</string>
    <string name="port">5555</string>
    <string name="phone">Your Phone Number</string>
    <string name="send">Attack</string>
    <string name="end">Stop</string>
    <string name="ttlHint">TTL</string>
    <string name="ttlText">30</string>
    <string name="volumeHint">AttackVolume</string>
    <string name="volumeText">3</string>
    <string name="ttl_hint">Please choose a type of attack.</string>
    <string name="unit">MB</string>
    <string name="switch1">DEFAULT ATTACK</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_ttl">TTL Attack</string>
    <string name="title_activity_ping_pang">PingPang Attack</string>
    <string name="title_activity_back_3g">Back3G Attack</string>

    <string name="set_ttl">SET</string>

    <string name="PingPangHint">Click ATTACK button to start a attack.</string>

    <string name="back3GHint">START A BACK3G ATTACK:</string>
    <string name="back3GHint1">First, download a file;</string>
    <string name="back3GButton1">START</string>
    <string name="back3GHint2">Second, dial a call.</string>
    <string name="back3GButton2">ATTACK</string>

    <string name="attack_hint">Please choose a type of attack.</string>
    <string-array name="attackChoose">
        <item>TTL Attack</item>
        <item>PingPong Attack</item>
        <item>Back3G Attack</item>
    </string-array>

    <!--<string name="voice_attack">2. VOICE ATTACK</string>-->
    <!--<string-array name="voicechoose">-->
        <!--<item>Ping-Pang ATTACK</item>-->
        <!--<item>BACK-3G ATTACK</item>-->
    <!--</string-array>-->

    <!--<string name="protocol_attack">3. PROTOCOL ATTACK</string>-->
    <!--<string-array name="protocolchoose">-->
        <!--<item>ATTACK 1</item>-->
        <!--<item>ATTACK 2</item>-->
    <!--</string-array>-->

    <string name="startattack">START</string>

    <string name="hello_world">Hello world!</string>


    <string name="back3g_hint">Click START button to download a file.</string>
    <string name="pingpong_hint">Please choose a type of attack</string>

    <string name="apphint">Welcome to</string>
    <string name="apphint2">HackCellular</string>

    <string name="home">HOME</string>

</resources>
