<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/scrollView_back3G"
        android:fillViewport="true">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context="edu.osu.cse5469.hackcellular.Back3GActivity"
            android:id="@+id/relativeLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentCenter="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/linear1_back3G">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Hint_back3G"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/back3GHint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/linear1_back3G"
                android:id="@+id/linear2_back3G">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Hint_back3G1"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:text="@string/back3GHint1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button1_back3G"
                    android:text="@string/back3GButton1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/linear2_back3G"
                android:id="@+id/linear3_back3G">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Hint2_back3G"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:text="@string/back3GHint2" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2_back3G"
                    android:text="@string/back3GButton2" />
            </LinearLayout>

            <SurfaceView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/surfaceView_back3G"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linear3_back3G"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>