<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/scrollView_PingPang"
        android:fillViewport="true">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context="edu.osu.cse5469.hackcellular.PingPangActivity"
            android:id="@+id/relativeLayout_PingPang">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/linear1_PingPang">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:id="@+id/phone_pingpang"/>



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_horizontal_margin">
                    <Button

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/startAttack_pingpang"
                        android:layout_weight="1"
                        android:text="@string/send"
                        android:textColor="@drawable/white"
                        android:background="@drawable/red"
                        android:textSize="20dp"/>



                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/stopAttack_pingpang"
                        android:layout_weight="1"
                        android:text="@string/end"
                        android:textColor="@drawable/white"
                        android:background="@drawable/red"
                        android:textSize="20dp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PingPangHint"
                android:id="@+id/textHint_pingpong"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linear1_PingPang"
                android:textColor="@drawable/grey"
                android:textSize="18dp"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                />

            <SurfaceView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/surfaceView_PingPang"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textHint_pingpong"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>